--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                             </nav>
                                         </div>
                                         <div class="mt-3" data-aos="fade-up" data-aos-delay="200">
-                                            <a class="btn btn-primary shadow-sm mt-1 hover-effect" href="./cv/CV.pdf">Download CV
+                                            <a class="btn btn-primary shadow-sm mt-1 hover-effect" href="./cv/CV_Bambang Sugiarto.pdf">Download CV
                                                 <i class="fas fa-arrow-right"></i>
                                             </a>
                                         </div>
@@ -520,6 +520,21 @@
                                             </p>
                                           <h5 class="card-title"><a href="https://github.com/Fachrulmustofa20/inspeksi_kendaraan_CodeIgniter">Inspeksi Kendaraan</a></h5>
                                           <p class="card-text"><small class="text-muted">In this project it is used for vehicle inspections at the terminal </small></p>
+                                        </div>
+                                      </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4 mb-3">
+                                <div class="card-group">
+                                    <div class="card">
+                                        <img class="card-img-top" src="./images/portfolio/mp.png" alt="Card image cap">
+                                        <div class="card-body">
+                                            <p class="card-text">
+                                                <span class="badge bg-danger">PHP</span>
+                                                <span class="badge bg-warning">Back-End</span>
+                                            </p>
+                                          <h5 class="card-title"><a href="https://github.com/Fachrulmustofa20/Monitoring-Project-Web-Apps">Management project</a></h5>
+                                          <p class="card-text"><small class="text-muted">The results of the internship at PT DES Teknologi. In this project using PHP with the Codeigniter framework.</small></p>
                                         </div>
                                       </div>
                                 </div>
